<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvEmoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="🐣"
            android:textSize="72sp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/tvDelta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+10 pts"
            android:textStyle="bold"
            android:textSize="18sp"
            android:visibility="gone"
            android:paddingTop="4dp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Flame the dragon"
            android:textSize="18sp"
            android:paddingTop="12dp" />

        <TextView
            android:id="@+id/tvStage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stage: BABY (Lv 1)"
            android:textSize="16sp"
            android:paddingTop="4dp" />

        <TextView
            android:id="@+id/tvPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Points: 0"
            android:textSize="16sp"
            android:paddingTop="2dp"
            android:paddingBottom="12dp"/>

        <!-- meters -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hunger"
            android:textStyle="bold"/>
        <ProgressBar
            android:id="@+id/barHunger"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:max="100"
            android:progress="50"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Happiness"
            android:textStyle="bold"
            android:paddingTop="8dp"/>
        <ProgressBar
            android:id="@+id/barHappiness"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:max="100"
            android:progress="50"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Energy"
            android:textStyle="bold"
            android:paddingTop="8dp"/>
        <ProgressBar
            android:id="@+id/barEnergy"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:max="100"
            android:progress="50"/>

        <!-- action buttons -->
        <LinearLayout
            android:id="@+id/layoutMainButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/btnChat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Chat 💬" />

            <Button
                android:id="@+id/btnTuck"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tuck 😴"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btnJournal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Journal 📓"
                />

        </LinearLayout>


        <!-- feed options -->
        <LinearLayout
            android:id="@+id/layoutFeedChoices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="16dp"
            android:visibility="gone">

            <Button
                android:id="@+id/btnFoodKibble"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Kibble 🍖" />

            <Button
                android:id="@+id/btnFoodFish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Fish 🐟"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btnFoodPizza"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Pizza 🍕" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvReply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Say hi to your pet!"
            android:textSize="16sp"
            android:paddingTop="18dp"
            android:paddingBottom="24dp" />

        <!-- ❌ RESET BUTTON -->
        <!-- I only use it for testing while developing
            will remove for implementation 2.5 -->

        <Button
            android:id="@+id/btnSettings"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Settings ⚙️"
            />

<!--        <Button-->
<!--            android:id="@+id/btnReset"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Reset Pet" />-->


    </LinearLayout>
</ScrollView>


